# CHoD-ReX

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  castlevania_harmony_of_despair_manifest.toml
scripts/: build-release.ps1  build-xex-patch-diff.ps1  codegen.ps1  configure-release.ps1  export-stfs-license-header.ps1  extract_game_data.py  inspect-stfs-license.ps1  inspect_xex_patch.py
src/: castlevania_harmony_of_despair_app.h  chod_loose_content.cpp  chod_loose_content.h  chod_title_exit.cpp  main.cpp
tools/XexPatchDiff/: CMakeLists.txt  xex_patch_diff.cpp
